@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-06T08:22:27Z",
+  "timestamp" : "2022-05-06T16:27:07Z",
   "count_outdated" : 138,
   "uniques_outdated" : 94,
-  "count" : 198,
-  "uniques" : 128,
+  "count" : 199,
+  "uniques" : 129,
   "clones" : [
     {
       "timestamp": "2022-04-25T00:00:00Z",
@@ -49,10 +49,10 @@
     },
     {
       "timestamp": "2022-05-06T00:00:00Z",
-      "count": 5,
-      "count_minmax": [ 0, 5 ],
-      "uniques": 4,
-      "uniques_minmax": [ 0, 4 ]
+      "count": 6,
+      "count_minmax": [ 0, 6 ],
+      "uniques": 5,
+      "uniques_minmax": [ 0, 5 ]
     }
   ]
 }
