@@ -1,6 +1,6 @@
 {
-  "count": 60,
-  "uniques": 16,
+  "count": 61,
+  "uniques": 17,
   "clones": [
     {
       "timestamp": "2022-04-25T00:00:00Z",
@@ -34,8 +34,8 @@
     },
     {
       "timestamp": "2022-05-06T00:00:00Z",
-      "count": 5,
-      "uniques": 4
+      "count": 6,
+      "uniques": 5
     }
   ]
 }
