@@ -1,3 +1,9 @@
+2022-05-06T16:27:07Z:
+* notice: last 14d: all unq: 61 17
+* notice: prev accum: outdated-all outdated-unq / all unq: 138 94 / 198 128
+* notice: next accum: outdated-all outdated-unq / all unq: 138 94 / 199 129
+* notice: prev json diff // prev day diff: unq all: +1 +1 / -0 -0 // +6 +7 / -0 -0
+
 2022-05-06T08:22:27Z:
 * notice: last 14d: all unq: 60 16
 * notice: prev accum: outdated-all outdated-unq / all unq: 138 94 / 193 124
